--- a/html/index.html
+++ b/html/index.html
@@ -17,6 +17,22 @@
             background-color: gray;
             flex-direction: column;
         }
+
+        .header{
+            background: #6b9b37;
+        }
+
+        .main{
+            background: #9ccc65;
+        }
+
+        .footer{
+            background:#cfff95;
+        }
+
+        .left{
+            background:#ffffa8;
+        }
     </style>
 </head>
 
