--- a/html/index.html
+++ b/html/index.html
@@ -6,52 +6,59 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kanit:wght@200;400;600&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <style>
-        img {
-            width: 30%;
-            min-width: 200px;
+        body {
+            margin: 0;
         }
 
-        .wrapper {
-            display: flex;
-            background-color: gray;
-            flex-direction: column;
+        .box {
+            --mask:
+                radial-gradient(223.61px at 50% calc(100% - 300.00px), #000 99%, #0000 101%) calc(50% - 200px) 0/400px 100%,
+                radial-gradient(223.61px at 50% calc(100% + 200.00px), #0000 99%, #000 101%) 50% calc(100% - 100px)/400px 100% repeat-x;
+            -webkit-mask: var(--mask);
+            mask: var(--mask);
+            position: absolute;
+            top: 0;
+            left: 0;
+            opacity:0.8;
+            filter:brightness(70%);
+            z-index:-1;
         }
 
-        .header{
-            background: #6b9b37;
+        .fa-dog{
+            color:red;
         }
 
-        .main{
-            background: #9ccc65;
-        }
-
-        .footer{
-            background:#cfff95;
-        }
-
-        .left{
-            background:#ffffa8;
+        .puppi-font{
+            font-family: Kanit;
+            font-size:22px;
+            font-weight: 600;
+            margin-top:-8px;
         }
     </style>
+    <link rel="stylesheet" href="w3.css">
 </head>
 
 <body>
-    <div class="wrapper">
-        <div class="header">header</div>
-        <div class="main">
-            <div class="left">left</div>
-            <div class="content">
-                <img src="../images/layout1.webp">
-                <ul>
-                    <li><a href="https://htmlacademy.ru">HTML academy</a></li>
-                    <li><a href="https://flexboxfroggy.com">Flex froggy</a></li>
-                    <li><a href="https://m2.material.io/resources">Color picker</a></li>
-                </ul>
-            </div>
+    <!--Header-->
+    <header class="w3-bar" style="background-color: rgba(0,0,0,0); width:600px">
+        <div class="w3-bar-item puppi-font">&nbsp;<i class="fa-solid fa-dog"></i>&nbsp;
+            Puppi Care
         </div>
-        <div class="footer">footer</div>
-    </div>
+        <a href="#" class="w3-bar-item w3-button">About</a>
+        <a href="#" class="w3-bar-item w3-button">Service</a>
+
+    </header>
+
+    <img src="images/dog.webp" class="box w3-sepia-min"><br />
+
+    <img src="images/puppyCare.jpg" style="width:400px; margin-top:400px">
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/js/all.min.js"></script>
 </body>
 
 </html>
