--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,9 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link href="https://fonts.googleapis.com/css2?family=Kanit:wght@200;400;600&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Kanit:wght@200;400;600&family=Roboto:wght@300;400;700&display=swap"
+        rel="stylesheet">
     <style>
         body {
             margin: 0;
@@ -23,28 +25,28 @@
             position: absolute;
             top: 0;
             left: 0;
-            opacity:0.8;
-            filter:brightness(70%);
-            z-index:-1;
-            width:960px;
+            opacity: 0.8;
+            filter: brightness(70%);
+            z-index: -1;
+            width: 960px;
         }
 
-        .fa-dog{
-            color:red;
+        .fa-dog {
+            color: red;
         }
 
-        .puppi-font{
+        .puppi-font {
             font-family: Kanit;
-            font-size:22px;
+            font-size: 22px;
             font-weight: 600;
-            margin-top:-6px;
+            margin-top: -6px;
         }
 
-        .input-search{
-            width:100px;
-            display:inline;
-            outline:none;
-            padding:2px;
+        .input-search {
+            width: 100px;
+            display: inline;
+            outline: none;
+            padding: 2px;
             margin-top: 4px;
         }
     </style>
@@ -70,7 +72,7 @@
             </div>
         </div>
         <a href="#" class="w3-bar-item w3-button w3-hide-small">Contact</a>
-        <div class="w3-bar-item w3-right" style="padding:0">
+        <div class="w3-bar-item w3-right" style="padding:0; margin-right:50px">
             <input class="w3-input w3-border w3-round-xxlarge input-search" type="text">
             <a href="#" class="w3-button"><i class="fa fa-search"></i></a>
         </div>
